--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>石板谜题</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
     <h1>石板谜题</h1>
@@ -29,6 +30,16 @@
     <div class="info" id="infoPanel">
         正在加载谜题...
     </div>
+
+    <footer class="footer">
+        <a href="https://github.com/timetetng" target="_blank">
+            <i class="fas fa-user-circle"></i> Created by timetetng
+        </a>
+        <a href="https://github.com/timetetng/web_puzzle.git" target="_blank">
+            <i class="fab fa-github"></i> GitHub Repository
+        </a>
+    </footer>
+
     <script src="/static/js/game.js"></script>
 </body>
 </html>
