--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,23 +26,32 @@ h1 {
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
+
 #mode-selection h2 {
     margin-top: 0;
     margin-bottom: 20px;
 }
-.mode-btn {
+
+#mode-selection .mode-btn,
+#mode-selection #leaderboard-btn {
     font-size: 1.2em;
     padding: 15px 30px;
-    margin: 0 10px;
+    margin: 0 0 15px 0; /* 在每个按钮的底部添加 15px 的外边距 */
+    width: 70%;
+    max-width: 280px;
 }
-#leaderboard-btn {
-    margin-top: 20px;
-    background-color: #6c757d;
+
+#mode-selection #leaderboard-btn {
+    margin-bottom: 30;
 }
 
 
-/* --- 游戏主区域垂直布局 --- */
 #game-area {
     display: flex;
     flex-direction: column; 
