--- a/templates/index.html
+++ b/templates/index.html
@@ -133,6 +133,6 @@
         </a>
     </footer>
 
-    <script src="/static/js/game.js?v=final"></script>
+    <script src="/static/js/game.js?v=final1"></script>
 </body>
 </html>
